apps/security/base/allow-all-policy/allow-all-policy-oddjob.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: oddjob-allow-access
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: oddjob
  action: ALLOW
  rules:
    - {}
